{
  "version": 4,
  "terraform_version": "1.13.5",
  "serial": 54,
  "lineage": "0c321581-c705-328d-df5d-13c23db43247",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f30107b0d43e4ae8",
            "arn": "arn:aws:ec2:ap-northeast-1:906034468113:elastic-ip/eipalloc-0f30107b0d43e4ae8",
            "domain": "vpc",
            "id": "eipalloc-0f30107b0d43e4ae8",
            "network_border_group": "ap-northeast-1",
            "public_dns": "ec2-13-159-172-128.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "13.159.172.128",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nhqb-terraform-nat-eip"
            },
            "tags_all": {
              "Name": "nhqb-terraform-nat-eip"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:906034468113:internet-gateway/igw-05611b3afa617950a",
            "id": "igw-05611b3afa617950a",
            "owner_id": "906034468113",
            "tags": {
              "Name": "nhqb-terraform-igw"
            },
            "tags_all": {
              "Name": "nhqb-terraform-igw"
            },
            "vpc_id": "vpc-094cbf98a9c369d6f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f30107b0d43e4ae8",
            "association_id": "eipassoc-0e5c95406c38b15c5",
            "connectivity_type": "public",
            "id": "nat-07519a118cdfe87f0",
            "network_interface_id": "eni-07076c8736691cfad",
            "private_ip": "10.0.0.40",
            "public_ip": "13.159.172.128",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-02a96fd4aeaa6de5c",
            "tags": {
              "Name": "nhqb-terraform-nat-gateway"
            },
            "tags_all": {
              "Name": "nhqb-terraform-nat-gateway"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0c2e9443eee48dd9f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-07519a118cdfe87f0",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c2e9443eee48dd9f",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_inet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-05611b3afa617950a",
            "id": "r-rtb-00410045c9ddc72a11080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-00410045c9ddc72a1",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:906034468113:route-table/rtb-0c2e9443eee48dd9f",
            "id": "rtb-0c2e9443eee48dd9f",
            "owner_id": "906034468113",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "nhqb-terraform-private-rt"
            },
            "tags_all": {
              "Name": "nhqb-terraform-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-094cbf98a9c369d6f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:906034468113:route-table/rtb-00410045c9ddc72a1",
            "id": "rtb-00410045c9ddc72a1",
            "owner_id": "906034468113",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "nhqb-terraform-public-rt"
            },
            "tags_all": {
              "Name": "nhqb-terraform-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-094cbf98a9c369d6f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-004831a91f595d7a8",
            "route_table_id": "rtb-0c2e9443eee48dd9f",
            "subnet_id": "subnet-0edbc8833b6058376"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09cf531f833ec4482",
            "route_table_id": "rtb-0c2e9443eee48dd9f",
            "subnet_id": "subnet-01e7345fe02d6eff6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09328148eeffa3642",
            "route_table_id": "rtb-00410045c9ddc72a1",
            "subnet_id": "subnet-02a96fd4aeaa6de5c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0707e28eea150896b",
            "route_table_id": "rtb-00410045c9ddc72a1",
            "subnet_id": "subnet-0fec23276d0ac5b73"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:906034468113:subnet/subnet-0edbc8833b6058376",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.0.128/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0edbc8833b6058376",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "906034468113",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "nhqb-terraform-private-0"
            },
            "tags_all": {
              "Name": "nhqb-terraform-private-0"
            },
            "vpc_id": "vpc-094cbf98a9c369d6f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:906034468113:subnet/subnet-01e7345fe02d6eff6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.0.192/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01e7345fe02d6eff6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "906034468113",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "nhqb-terraform-private-1"
            },
            "tags_all": {
              "Name": "nhqb-terraform-private-1"
            },
            "vpc_id": "vpc-094cbf98a9c369d6f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:906034468113:subnet/subnet-02a96fd4aeaa6de5c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.0.0/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02a96fd4aeaa6de5c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "906034468113",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "nhqb-terraform-public-0"
            },
            "tags_all": {
              "Name": "nhqb-terraform-public-0"
            },
            "vpc_id": "vpc-094cbf98a9c369d6f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:906034468113:subnet/subnet-0fec23276d0ac5b73",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.0.64/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fec23276d0ac5b73",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "906034468113",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "nhqb-terraform-public-1"
            },
            "tags_all": {
              "Name": "nhqb-terraform-public-1"
            },
            "vpc_id": "vpc-094cbf98a9c369d6f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:906034468113:vpc/vpc-094cbf98a9c369d6f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/24",
            "default_network_acl_id": "acl-05055eaf367c92365",
            "default_route_table_id": "rtb-05252075cb9bbddb4",
            "default_security_group_id": "sg-02f04207838d8e957",
            "dhcp_options_id": "dopt-013e2278341edc67d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-094cbf98a9c369d6f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05252075cb9bbddb4",
            "owner_id": "906034468113",
            "tags": {
              "Name": "nhqb-terraform-vpc"
            },
            "tags_all": {
              "Name": "nhqb-terraform-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}